[package]
name = "boolean_expression"
version = "0.4.4"
edition = "2021"
authors = ["Chris Fallin <cfallin@c1f.net>"]
description = "A library for manipulating and evaluating Boolean expressions and BDDs"
repository = "https://github.com/cfallin/boolean_expression"
documentation = "https://cfallin.github.io/boolean_expression/boolean_expression/"
license = "MIT"

[features]
default = []
bevy_reflect = [
    "dep:bevy_reflect",
    "dep:bevy_reflect_derive",
]

[dependencies]
bevy_reflect = { version = "0.10", optional = true }
bevy_reflect_derive = { version = "0.10", optional = true }
hashbrown = { version = "0.12", features = ["serde"] }
smallvec = "1"
itertools = "0.10"

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
indoc = "2"
